# NaivES

./: .gitignore  CMakeLists.txt  README.md
src/cpu/: alu.cpp  alu.h  core.h  opcode.h  regfile.cpp  regfile.h
src/define/: addr.h  type.h  width.h
src/mem/: mem.cpp  mem.h
src/ppu/: ppu.h
